--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,22 @@
         }
     ],
     "minimum-stability": "stable",
-    "require": {}
+    "require": {
+        "apphostbd/laravel-fpdf": "^1.0"
+    },
+	"autoload": {
+		"psr-4": {
+			"Checkitsedo\\Esrpaymentslip\\": "packages/checkitsedo/esrpaymentslip/src/"
+		}
+	},
+	"extra": {
+		"laravel": {
+			"providers": [
+				"Checkitsedo\\Esrpaymentslip\\EsrpaymentslipServiceProvider"
+			],
+			"aliases": {
+				"EsrpaymentslipHelper": "Checkitsedo\\Esrpaymentslip\\Helpers\\EsrpaymentslipHelper"
+			}
+		}
+	}
 }
