--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "checkitsedo/esrpaymentslip",
     "description": "Creates Swiss ESR Payment Slips (with Laravel)",
-    "type": "package",
+    "type": "library",
     "license": "MIT",
     "authors": [
         {
@@ -15,11 +15,14 @@
     },
 	"autoload": {
 		"psr-4": {
-			"Checkitsedo\\Esrpaymentslip\\": "packages/checkitsedo/esrpaymentslip/src/"
+			"Checkitsedo\\Esrpaymentslip\\": "src/"
 		}
 	},
 	"extra": {
 		"laravel": {
+			"providers": [
+				"Checkitsedo\\Esrpaymentslip\\EsrpaymentslipServiceProvider"
+			],
 			"aliases": {
 				"EsrpaymentslipHelper": "Checkitsedo\\Esrpaymentslip\\Helpers\\EsrpaymentslipHelper"
 			}
